# carwatch-python

./: .gitignore  CHANGELOG.md  LICENSE  README.md  _tasks.py  pyproject.toml
docs/: conf.py  index.rst
docs/guides/: analysis_workflow.rst  index.rst
docs/modules/: exceptions.rst  index.rst  io.rst  logs.rst  merge.rst  saliva.rst
example_data/: README.md  availability_cases_saliva.csv  availability_cases_summary.csv  saliva_samples.csv
examples/: CARWatch_Analysis_Example.py  CARWatch_Import_Example.ipynb  CARWatch_Import_Example.py  CARWatch_Import_Example_Availability_Cases.ipynb  README.rst
examples/data/: carwatch_demo_VP01_20250515.csv  saliva_samples.csv  study_results.csv
playground/: SuCAR_preprocessing_20260327.Rmd
playground/data/: carwatch_logs_02.csv  carwatch_sucar-tag2_vp01_20250515.csv  study_results.csv
src/carwatch/: __init__.py  exceptions.py  logs.py  merge.py  study_manager.py
src/carwatch/io/: __init__.py  _raw_logs.py  _saliva.py  _study_manager.py  logs.py  saliva.py  study_results.py
src/carwatch/saliva/: __init__.py  metrics.py  utils.py
tests/: test_example_data.py  test_examples.py  test_imports.py  test_io_logs.py  test_io_saliva.py  test_io_study_results.py  test_merge.py  test_saliva_metrics.py  test_workflow.py
