[project]
name = "carwatch"
version = "0.1.0"
description = "Python package to analyze CARWatch and saliva data."
authors = [
    {name = "Robert Richer", email = "robert.richer@fau.de"},
]
requires-python = ">=3.10,<4.0"
dependencies = [
    "pandas>=2,<3",
]
license = "MIT"
readme = "README.md"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.sdist]
include = ["src/carwatch"]

[tool.hatch.build.targets.wheel]
include = ["src/carwatch"]

[tool.hatch.build.targets.wheel.sources]
"src/carwatch" = "carwatch"

[tool.poe.tasks]
_format = "ruff format src"
_auto_fix = "ruff check src --fix-only --show-fixes --exit-zero"
_auto_fix_unsafe = "ruff check src --fix-only --show-fixes --exit-zero --unsafe-fixes"
format = ["_auto_fix", "_format"]
format_unsafe = ["_auto_fix_unsafe", "_format"]
lint = { cmd = "ruff check src --fix", help = "Lint all files with ruff." }
_lint_ci = "ruff check src --output-format=github"
_check_format = "ruff format src --check"
ci_check = { sequence = ["_check_format", "_lint_ci"], help = "Check all potential format and linting issues." }
test = { cmd = "pytest --cov=carwatch --cov-report=term-missing --cov-report=xml", help = "Run Pytest with coverage." }
docs = { "script" = "_tasks:task_docs()",  help = "Build the html docs using Sphinx." }
docs_clean = { "script" = "_tasks:task_docs(clean=True)",  help = "Remove all old build files and build a clean version of the docs." }
docs_preview = { cmd = "python -m http.server --directory docs/_build/html", help = "Preview the built html docs." }
version = { script = "_tasks:task_update_version()" }
conf_jupyter = { cmd = "python -m ipykernel install --user --name carwatch --display-name carwatch", help = "Add a new jupyter kernel for the project." }
remove_jupyter = { cmd = "jupyter kernelspec uninstall carwatch", help = "Remove the project specific jupyter kernel." }


[dependency-groups]
dev = [
    "ipykernel>=6,<7",
    "matplotlib>=3.10.9",
    "memory-profiler>=0.61.0",
    "nbconvert>=7,<8",
    "numpydoc>=1.10.0",
    "poethepoet>=0.48.0",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "recommonmark>=0.7.1",
    "ruff>=0.15.22",
    "sphinx>=8.1.3",
    "sphinx-gallery>=0.21.0",
    "toml>=0.10.2",
]
